refactor(repository): improve DAO design and unit test clarity
- expose resilienceHelper for testability in JdbcClientDaoImpl
- refactor RoleRepository and UserRepository for consistency
- clean RoleRepositoryTest of unnecessary stubs
- strengthen UserRepositoryTest assertions and coverage